--- a/ScaleSmooth.csproj
+++ b/ScaleSmooth.csproj
@@ -35,6 +35,7 @@
     <None Remove="Resources\arLeft.png" />
     <None Remove="Resources\arRight.png" />
     <None Remove="Resources\short13.png" />
+    <None Remove="Resources\shortBAcontrast.png" />
     <None Remove="Resources\shortBil.png" />
     <None Remove="Resources\shortBilApprox.png" />
     <None Remove="Resources\shortBold.png" />
@@ -62,6 +63,7 @@
     <Resource Include="Resources\arLeft.png" />
     <Resource Include="Resources\arRight.png" />
     <Resource Include="Resources\short13.png" />
+    <Resource Include="Resources\shortBAcontrast.png" />
     <Resource Include="Resources\shortBil.png" />
     <Resource Include="Resources\shortBilApprox.png" />
     <Resource Include="Resources\shortBold.png" />
