--- a/ScaleSmooth.csproj
+++ b/ScaleSmooth.csproj
@@ -36,6 +36,7 @@
     <None Remove="Resources\arRight.png" />
     <None Remove="Resources\short13.png" />
     <None Remove="Resources\shortBAcontrast.png" />
+    <None Remove="Resources\shortBAExtremum.png" />
     <None Remove="Resources\shortBAmonochrome.png" />
     <None Remove="Resources\shortBil.png" />
     <None Remove="Resources\shortBilApprox.png" />
@@ -65,6 +66,7 @@
     <Resource Include="Resources\arRight.png" />
     <Resource Include="Resources\short13.png" />
     <Resource Include="Resources\shortBAcontrast.png" />
+    <Resource Include="Resources\shortBAExtremum.png" />
     <Resource Include="Resources\shortBAmonochrome.png" />
     <Resource Include="Resources\shortBil.png" />
     <Resource Include="Resources\shortBilApprox.png" />
