--- a/ScaleSmooth.csproj
+++ b/ScaleSmooth.csproj
@@ -35,6 +35,7 @@
     <None Remove="Resources\arLeft.png" />
     <None Remove="Resources\arRight.png" />
     <None Remove="Resources\short13.png" />
+    <None Remove="Resources\short255BA.png" />
     <None Remove="Resources\shortBAcontrast.png" />
     <None Remove="Resources\shortBAExtremum.png" />
     <None Remove="Resources\shortBAmonochrome.png" />
@@ -67,6 +68,7 @@
     <Resource Include="Resources\arLeft.png" />
     <Resource Include="Resources\arRight.png" />
     <Resource Include="Resources\short13.png" />
+    <Resource Include="Resources\short255BA.png" />
     <Resource Include="Resources\shortBAcontrast.png" />
     <Resource Include="Resources\shortBAExtremum.png" />
     <Resource Include="Resources\shortBAmonochrome.png" />
